[gd_scene load_steps=3 format=3 uid="uid://dnpvspo3ju6nf"]

[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="1_mqs1s"]
[ext_resource type="AudioStream" uid="uid://dlo0a7twmg72s" path="res://Assets/Audio/summer-adventures-115949.mp3" id="2_8hlpe"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_mqs1s")

[node name="Title" type="Label" parent="."]
offset_left = 23.0
offset_top = 24.0
offset_right = 365.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(1, 0.501961, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Curse of the pond"

[node name="UnderTitle" type="Label" parent="."]
offset_left = 29.0
offset_top = 127.0
offset_right = 129.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(1, 0.501961, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "And the depressive frog"

[node name="StartButton" type="Button" parent="."]
offset_left = 46.0
offset_top = 275.0
offset_right = 381.0
offset_bottom = 337.0
text = "START"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 46.0
offset_top = 369.0
offset_right = 381.0
offset_bottom = 431.0
text = "Credits"

[node name="ExitButton" type="Button" parent="."]
offset_left = 46.0
offset_top = 464.0
offset_right = 381.0
offset_bottom = 526.0
text = "Exit
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 1070.0
offset_top = 708.0
offset_right = 1189.0
offset_bottom = 737.0
text = "Kunst af Eik"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8hlpe")
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
position = Vector2(600.079, 374.921)
scale = Vector2(0.999869, 1.00021)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
